compiler/testData/diagnostics/tests/generics/tpAsReified/ClassDereference.fir.kt

fun <T: Any> dereferenceClass(): Any =
        <!OTHER_ERROR!>T<!>::class
